myfirstapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front-javascript
    version: v1
  name: front-javascript-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-javascript
  template:
    metadata:
      labels:
        name: front-javascript-v1
        app: front-javascript
        version: v1
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-front-javascript:latest
        imagePullPolicy: Always
        name: front-javascript-v1
        ports:
          - containerPort: 3000
            protocol: TCP
        resources: {}
