myfirstapp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-javascript-v1
spec:
  to:
    kind: Service
    name: myfirstapp-front-javascript-v1
  port:
    targetPort: http-8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
